// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubflowRouterForm ivr render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="enter_flow"
  tabs={Array []}
  title="Enter a Flow"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_subflow",
        ],
        "component": [Function],
        "description": "Enter another flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Enter a Flow",
        "type": "enter_flow",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    additionalOptions={
      Array [
        Object {
          "id": "expression",
          "name": "Expression",
          "type": "message",
        },
      ]
    }
    assets={
      Object {
        "items": Object {},
        "type": "flow",
      }
    }
    entry={
      Object {
        "value": Object {
          "name": "Sounds",
          "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        },
      }
    }
    name="Flow"
    onChange={[Function]}
    placeholder="Select the flow to start"
    searchable={true}
    shouldExclude={[Function]}
  />
</Dialog>
`;

exports[`SubflowRouterForm ivr updates converts from other node types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Sound",
            "uuid": "80b0a850-6973-11ed-9c42-ad7d71773e93",
          },
          "type": "enter_flow",
          "uuid": "2d1284d0-6972-11ed-9ca7-8f291517c832",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "141e0356-9fdd-47d3-a12d-16efc5b45276",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "completed",
            ],
            "category_uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
            "type": "has_only_text",
            "uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "141e0356-9fdd-47d3-a12d-16efc5b45276",
            "name": "Complete",
            "uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
          },
        ],
        "default_category_uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm ivr updates creates its own action uuid if necessary 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Sound",
            "uuid": "80b0a850-6973-11ed-9c42-ad7d71773e93",
          },
          "type": "enter_flow",
          "uuid": "dd57500e-a8e8-4a98-8b5b-a33637523a8d",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "431978dd-6b18-4e25-86f1-11835491a9c9",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "completed",
            ],
            "category_uuid": "3d8db86c-7279-4106-a388-3f143bd5623f",
            "type": "has_only_text",
            "uuid": "96249bdc-cb58-4489-a188-0eeb6686a8c9",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "431978dd-6b18-4e25-86f1-11835491a9c9",
            "name": "Complete",
            "uuid": "3d8db86c-7279-4106-a388-3f143bd5623f",
          },
        ],
        "default_category_uuid": "3d8db86c-7279-4106-a388-3f143bd5623f",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm ivr updates should update and save 1`] = `
Object {
  "expression": "",
  "flow": Object {
    "validationFailures": Array [],
    "value": Object {
      "name": "Favorite Sound",
      "parent_refs": Array [
        "sounds",
      ],
      "type": "voice",
      "uuid": "80b0a850-6973-11ed-9c42-ad7d71773e93",
    },
  },
  "params": Object {
    "sounds": Object {
      "value": "",
    },
  },
  "valid": true,
}
`;

exports[`SubflowRouterForm ivr updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Sound",
            "uuid": "80b0a850-6973-11ed-9c42-ad7d71773e93",
          },
          "type": "enter_flow",
          "uuid": "2d1284d0-6972-11ed-9ca7-8f291517c832",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "C",
            ],
            "category_uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
            "type": "has_run_status",
            "uuid": "f05fa107-03db-4315-a211-53da63603e6f",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
            "name": "Complete",
            "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
          },
        ],
        "default_category_uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm msg render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="enter_flow"
  tabs={Array []}
  title="Enter a Flow"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_subflow",
        ],
        "component": [Function],
        "description": "Enter another flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Enter a Flow",
        "type": "enter_flow",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    additionalOptions={
      Array [
        Object {
          "id": "expression",
          "name": "Expression",
          "type": "message",
        },
      ]
    }
    assets={
      Object {
        "items": Object {},
        "type": "flow",
      }
    }
    entry={
      Object {
        "value": Object {
          "name": "Colors",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      }
    }
    name="Flow"
    onChange={[Function]}
    placeholder="Select the flow to start"
    searchable={true}
    shouldExclude={[Function]}
  />
</Dialog>
`;

exports[`SubflowRouterForm msg updates converts from other node types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Color",
            "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
          },
          "type": "enter_flow",
          "uuid": "d4a3a01c-1dee-4324-b107-4ac7a21d836f",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "completed",
            ],
            "category_uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
            "type": "has_only_text",
            "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
            "name": "Complete",
            "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          },
        ],
        "default_category_uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm msg updates creates its own action uuid if necessary 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Color",
            "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
          },
          "type": "enter_flow",
          "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "completed",
            ],
            "category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
            "type": "has_only_text",
            "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
            "name": "Complete",
            "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
          },
        ],
        "default_category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm msg updates should update and save 1`] = `
Object {
  "expression": "",
  "flow": Object {
    "validationFailures": Array [],
    "value": Object {
      "name": "Favorite Color",
      "parent_refs": Array [
        "colors",
      ],
      "type": "messaging",
      "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
    },
  },
  "params": Object {
    "colors": Object {
      "value": "",
    },
  },
  "valid": true,
}
`;

exports[`SubflowRouterForm msg updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "flow": Object {
            "name": "Favorite Color",
            "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
          },
          "type": "enter_flow",
          "uuid": "d4a3a01c-1dee-4324-b107-4ac7a21d836f",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_uuid": null,
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "C",
            ],
            "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "type": "has_run_status",
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          Object {
            "arguments": Array [
              "E",
            ],
            "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "type": "has_run_status",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Complete",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
          Object {
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "name": "Expired",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;
